#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
æœˆè¿åŠ¿åˆ†ææœåŠ¡ - åŸºäºå…«å­—çš„æœ¬æœˆè¿åŠ¿åˆ†æ
ç»“åˆç”¨æˆ·å…«å­—ã€å¤§è¿ã€æµå¹´ã€æµæœˆï¼Œåˆ†ææœ¬æœˆè¿åŠ¿
"""

import sys
import os
from typing import Dict, Any, Optional
from datetime import datetime, date
import calendar

# æ·»åŠ é¡¹ç›®æ ¹ç›®å½•åˆ°è·¯å¾„
project_root = os.path.dirname(os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(__file__)))))
sys.path.insert(0, project_root)

from server.services.bazi_service import BaziService
from server.services.bazi_detail_service import BaziDetailService
from server.services.rule_service import RuleService
from server.utils.data_validator import validate_bazi_data


class MonthlyFortuneService:
    """æœˆè¿åŠ¿åˆ†ææœåŠ¡"""
    
    @staticmethod
    def calculate_monthly_fortune(
        solar_date: str,
        solar_time: str,
        gender: str,
        target_month: Optional[str] = None,
        use_llm: bool = False,
        access_token: Optional[str] = None,
        bot_id: Optional[str] = None
    ) -> Dict[str, Any]:
        """
        è®¡ç®—æœˆè¿åŠ¿åˆ†æ
        
        Args:
            solar_date: ç”¨æˆ·å‡ºç”Ÿæ—¥æœŸï¼ˆé˜³å†ï¼‰
            solar_time: ç”¨æˆ·å‡ºç”Ÿæ—¶é—´
            gender: æ€§åˆ«
            target_month: ç›®æ ‡æœˆä»½ï¼ˆå¯é€‰ï¼Œé»˜è®¤ä¸ºæœ¬æœˆï¼‰ï¼Œæ ¼å¼ï¼šYYYY-MM
            use_llm: æ˜¯å¦ä½¿ç”¨ LLM ç”Ÿæˆï¼ˆå¯é€‰ï¼Œé»˜è®¤ä½¿ç”¨è§„åˆ™åŒ¹é…ï¼‰
            access_token: Coze Access Tokenï¼ˆå¯é€‰ï¼Œuse_llm=True æ—¶éœ€è¦ï¼‰
            bot_id: Coze Bot IDï¼ˆå¯é€‰ï¼Œuse_llm=True æ—¶éœ€è¦ï¼‰
            
        Returns:
            dict: åŒ…å«æœˆè¿åŠ¿åˆ†æç»“æœ
        """
        try:
            # 1. ç¡®å®šç›®æ ‡æœˆä»½
            if target_month:
                year, month = map(int, target_month.split('-'))
                target = date(year, month, 1)
            else:
                today = date.today()
                target = date(today.year, today.month, 1)
            
            target_datetime = datetime.combine(target, datetime.min.time())
            
            # 2. è®¡ç®—ç”¨æˆ·å…«å­—ï¼ˆå¤ç”¨ç°æœ‰æœåŠ¡ï¼‰
            bazi_result = BaziService.calculate_bazi_full(solar_date, solar_time, gender)
            if not bazi_result:
                return {
                    "success": False,
                    "error": "å…«å­—è®¡ç®—å¤±è´¥",
                    "fortune": None
                }
            
            # ã€ä¿®å¤ã€‘BaziService.calculate_bazi_full() ç›´æ¥è¿”å›å…«å­—æ•°æ®ï¼Œä¸æ˜¯ {'bazi': {...}}
            # å†å²æ•™è®­ï¼š2025-11-20 å› é”™è¯¯ä½¿ç”¨ .get('bazi', {}) å¯¼è‡´ bazi_data ä¸ºç©ºå­—å…¸
            bazi_data = bazi_result.get('bazi', bazi_result)  # å¦‚æœæ²¡æœ‰ 'bazi' é”®ï¼Œä½¿ç”¨æ•´ä¸ªç»“æœ
            
            # âœ… ç»Ÿä¸€ç±»å‹éªŒè¯ï¼šç¡®ä¿æ‰€æœ‰å­—æ®µç±»å‹æ­£ç¡®ï¼ˆé˜²æ­¢gRPCåºåˆ—åŒ–é—®é¢˜ï¼‰
            bazi_data = validate_bazi_data(bazi_data)
            
            # 3. è®¡ç®—è¯¦ç»†å…«å­—ä¿¡æ¯ï¼ˆåŒ…å«æµå¹´æµæœˆï¼Œå¤ç”¨ç°æœ‰æœåŠ¡ï¼‰
            detail_result = BaziDetailService.calculate_detail_full(
                solar_date,
                solar_time,
                gender,
                current_time=target_datetime,
                target_year=target.year  # æŒ‡å®šç›®æ ‡å¹´ä»½ï¼Œè·å–æµæœˆæ•°æ®
            )
            
            if not detail_result:
                return {
                    "success": False,
                    "error": "è¯¦ç»†å…«å­—è®¡ç®—å¤±è´¥",
                    "fortune": None
                }
            
            # 4. æå–æµæœˆä¿¡æ¯
            liuyue_info = MonthlyFortuneService._extract_liuyue_info(detail_result, target)
            
            # 5. åŒ¹é…æœˆè¿åŠ¿è§„åˆ™ï¼ˆå¤ç”¨è§„åˆ™ç³»ç»Ÿï¼‰
            matched_rules = RuleService.match_rules(
                bazi_data,
                rule_types=['fortune', 'monthly', 'annual'],  # è¿åŠ¿ç›¸å…³è§„åˆ™
                use_cache=True
            )
            
            # 6. ç”Ÿæˆæœˆè¿åŠ¿åˆ†æ
            if use_llm:
                # ä½¿ç”¨ LLM ç”Ÿæˆï¼ˆå¯é€‰ï¼‰
                fortune_analysis = MonthlyFortuneService._generate_with_llm(
                    bazi_data,
                    liuyue_info,
                    target,
                    access_token,
                    bot_id
                )
            else:
                # ä½¿ç”¨è§„åˆ™åŒ¹é…ç”Ÿæˆ
                fortune_analysis = MonthlyFortuneService._generate_with_rules(
                    bazi_data,
                    liuyue_info,
                    matched_rules,
                    target
                )
            
            return {
                "success": True,
                "target_month": target.strftime("%Y-%m"),
                "bazi_data": bazi_data,
                "liuyue_info": liuyue_info,
                "fortune": fortune_analysis,
                "matched_rules_count": len(matched_rules)
            }
            
        except Exception as e:
            import traceback
            return {
                "success": False,
                "error": f"è®¡ç®—æœˆè¿åŠ¿å¼‚å¸¸: {str(e)}\n{traceback.format_exc()}",
                "fortune": None
            }
    
    @staticmethod
    def _extract_liuyue_info(detail_result: Dict[str, Any], target_date: date) -> Dict[str, Any]:
        """æå–æµæœˆä¿¡æ¯ï¼ˆç›´æ¥ä½¿ç”¨LunarConverterè®¡ç®—å½“æœˆå¹²æ”¯ï¼‰"""
        from src.tool.LunarConverter import LunarConverter
        
        liuyue_info = {
            "month": target_date.strftime("%Y-%m"),
            "year": target_date.year,
            "month_num": target_date.month,
            "liuyue": None,
            "liunian": None,
            "dayun": None
        }
        
        try:
            # å¤©å¹²äº”è¡Œå¯¹åº”è¡¨
            stem_elements = {
                'ç”²': 'æœ¨', 'ä¹™': 'æœ¨',
                'ä¸™': 'ç«', 'ä¸': 'ç«',
                'æˆŠ': 'åœŸ', 'å·±': 'åœŸ',
                'åºš': 'é‡‘', 'è¾›': 'é‡‘',
                'å£¬': 'æ°´', 'ç™¸': 'æ°´'
            }
            
            # è·å–å½“æœˆçš„å¹´æœˆå¹²æ”¯ï¼ˆè¿”å›å­—å…¸æ ¼å¼ï¼‰
            year_ganzhi_dict = LunarConverter.get_year_ganzhi(target_date.year)
            month_ganzhi_dict = LunarConverter.get_month_ganzhi(target_date.year, target_date.month, 1)
            
            # æå–æœˆå¹²æ”¯å’Œäº”è¡Œ
            if isinstance(month_ganzhi_dict, dict) and 'stem' in month_ganzhi_dict and 'branch' in month_ganzhi_dict:
                month_stem = month_ganzhi_dict['stem']
                month_branch = month_ganzhi_dict['branch']
                month_element = stem_elements.get(month_stem, 'æœªçŸ¥')
                
                liuyue_info['liuyue'] = {
                    'ganzhi': f"{month_stem}{month_branch}",
                    'stem': {'char': month_stem, 'element': month_element},
                    'branch': {'char': month_branch}
                }
            
            # æå–å¹´å¹²æ”¯å’Œäº”è¡Œ
            if isinstance(year_ganzhi_dict, dict) and 'stem' in year_ganzhi_dict and 'branch' in year_ganzhi_dict:
                year_stem = year_ganzhi_dict['stem']
                year_branch = year_ganzhi_dict['branch']
                year_element = stem_elements.get(year_stem, 'æœªçŸ¥')
                
                liuyue_info['liunian'] = {
                    'ganzhi': f"{year_stem}{year_branch}",
                    'stem': {'char': year_stem, 'element': year_element},
                    'branch': {'char': year_branch}
                }
        except Exception as e:
            # è®¡ç®—å¤±è´¥æ—¶è¿”å›é»˜è®¤å€¼
            import logging
            logging.warning(f"æµæœˆä¿¡æ¯è®¡ç®—å¤±è´¥: {e}")
        
        return liuyue_info
    
    @staticmethod
    def _analyze_by_bazi(
        bazi_data: Dict[str, Any],
        liuyue_info: Dict[str, Any],
        matched_rules: list,
        target_date: date
    ) -> tuple:
        """åŸºäºå…«å­—åˆ†ææœ¬æœˆè¿åŠ¿"""
        # æå–å…³é”®ä¿¡æ¯
        day_element = bazi_data.get('elements', {}).get('day', {}).get('stem_element', 'åœŸ')
        element_counts = bazi_data.get('element_counts', {})
        
        # ã€é˜²å¾¡æ€§ä»£ç ã€‘ä¿®å¤ ten_gods_stats å¯èƒ½ä¸ºå­—ç¬¦ä¸²çš„é—®é¢˜
        # å†å²æ•™è®­ï¼š2025-11-20 å›  gRPC åºåˆ—åŒ–é—®é¢˜ï¼Œten_gods_stats å¯èƒ½æ˜¯å­—ç¬¦ä¸²
        ten_gods_stats_raw = bazi_data.get('ten_gods_stats', {})
        if isinstance(ten_gods_stats_raw, str):
            try:
                import ast
                ten_gods_stats_raw = ast.literal_eval(ten_gods_stats_raw)
            except (ValueError, SyntaxError):
                try:
                    import json
                    ten_gods_stats_raw = json.loads(ten_gods_stats_raw)
                except (json.JSONDecodeError, TypeError):
                    import logging
                    logger = logging.getLogger(__name__)
                    logger.error(f"ten_gods_stats è§£æå¤±è´¥: {ten_gods_stats_raw[:100]}")
                    ten_gods_stats_raw = {}
        if not isinstance(ten_gods_stats_raw, dict):
            import logging
            logger = logging.getLogger(__name__)
            logger.error(f"ten_gods_stats_raw ç±»å‹é”™è¯¯: {type(ten_gods_stats_raw)}")
            ten_gods_stats_raw = {}
        
        # ç¡®ä¿ totals ä¹Ÿæ˜¯å­—å…¸
        totals = ten_gods_stats_raw.get('totals', {}) if isinstance(ten_gods_stats_raw, dict) else {}
        if not isinstance(totals, dict):
            if isinstance(totals, str):
                try:
                    import ast
                    totals = ast.literal_eval(totals)
                except:
                    totals = {}
            else:
                totals = {}
        ten_gods_stats = totals
        
        # æµæœˆäº”è¡Œ
        liuyue_stem_element = 'æœªçŸ¥'
        if isinstance(liuyue_info.get('liuyue'), dict):
            liuyue_stem_element = liuyue_info['liuyue'].get('stem', {}).get('element', 'æœªçŸ¥')
        
        # äº”è¡Œç”Ÿå…‹å…³ç³»å½±å“è¯„åˆ†
        element_relation = MonthlyFortuneService._get_element_relation(day_element, liuyue_stem_element)
        base_score = 60
        
        if element_relation == 'ç”Ÿæˆ‘':
            base_score = 75  # å¾—ç”Ÿï¼Œè¿åŠ¿è¾ƒå¥½
        elif element_relation == 'æˆ‘ç”Ÿ':
            base_score = 55  # æ³„æ°”ï¼Œè¿åŠ¿ç¨å¼±
        elif element_relation == 'å…‹æˆ‘':
            base_score = 50  # å—å…‹ï¼Œéœ€è°¨æ…
        elif element_relation == 'æˆ‘å…‹':
            base_score = 70  # å…‹å‡ºï¼Œæœ‰åˆ©
        elif element_relation == 'æ¯”å’Œ':
            base_score = 65  # å¹³ç¨³
        
        # æ ¹æ®è§„åˆ™è°ƒæ•´è¯„åˆ†
        if matched_rules:
            rule_score_adj = len(matched_rules) * 2
            base_score = min(95, base_score + rule_score_adj)
        
        # ç”Ÿæˆå„é¡¹è¿åŠ¿
        career_text = MonthlyFortuneService._generate_career_fortune(day_element, liuyue_stem_element, element_relation, ten_gods_stats)
        wealth_text = MonthlyFortuneService._generate_wealth_fortune(day_element, liuyue_stem_element, element_relation, ten_gods_stats)
        love_text = MonthlyFortuneService._generate_love_fortune(day_element, liuyue_stem_element, element_relation, ten_gods_stats)
        health_text = MonthlyFortuneService._generate_health_fortune(day_element, element_counts, element_relation)
        advice = MonthlyFortuneService._generate_advice_by_relation(element_relation, day_element, liuyue_stem_element)
        
        return career_text, wealth_text, love_text, health_text, base_score, advice
    
    @staticmethod
    def _get_element_relation(day_element: str, liuyue_element: str) -> str:
        """è·å–äº”è¡Œç”Ÿå…‹å…³ç³»"""
        sheng_cycle = {'æœ¨': 'ç«', 'ç«': 'åœŸ', 'åœŸ': 'é‡‘', 'é‡‘': 'æ°´', 'æ°´': 'æœ¨'}
        ke_cycle = {'æœ¨': 'åœŸ', 'ç«': 'é‡‘', 'åœŸ': 'æ°´', 'é‡‘': 'æœ¨', 'æ°´': 'ç«'}
        
        if day_element == liuyue_element:
            return 'æ¯”å’Œ'
        elif sheng_cycle.get(liuyue_element) == day_element:
            return 'ç”Ÿæˆ‘'
        elif sheng_cycle.get(day_element) == liuyue_element:
            return 'æˆ‘ç”Ÿ'
        elif ke_cycle.get(liuyue_element) == day_element:
            return 'å…‹æˆ‘'
        elif ke_cycle.get(day_element) == liuyue_element:
            return 'æˆ‘å…‹'
        return 'å¹³å’Œ'
    
    @staticmethod
    def _generate_career_fortune(day_element: str, liuyue_element: str, relation: str, ten_gods: dict) -> str:
        """ç”Ÿæˆäº‹ä¸šè¿åŠ¿"""
        # ã€é˜²å¾¡æ€§ä»£ç ã€‘ç¡®ä¿ ten_gods æ˜¯å­—å…¸ç±»å‹
        if not isinstance(ten_gods, dict):
            ten_gods = {}
        
        templates = {
            'ç”Ÿæˆ‘': f"æœ¬æœˆå¾—{liuyue_element}ç›¸ç”Ÿï¼Œäº‹ä¸šè¿åŠ¿å‘å¥½ï¼Œé€‚åˆæ¨è¿›é‡ç‚¹é¡¹ç›®ï¼Œæ‰©å±•ä¸šåŠ¡ã€‚å¾—ä¸Šçº§èµè¯†ï¼Œæ™‹å‡æœ‰æœ›ã€‚",
            'æˆ‘å…‹': f"æ—¥ä¸»{day_element}å…‹{liuyue_element}ï¼Œæœ¬æœˆäº‹ä¸šè¿æœ‰åˆ©ï¼Œé€‚åˆä¸»åŠ¨äº‰å–æœºä¼šï¼Œå±•ç°é¢†å¯¼åŠ›ã€‚å†³ç­–æœæ–­ï¼Œæ˜“è·æˆåŠŸã€‚",
            'æ¯”å’Œ': f"æœ¬æœˆä¸æ—¥ä¸»{day_element}æ¯”å’Œï¼Œäº‹ä¸šè¿åŠ¿å¹³ç¨³ï¼Œé€‚åˆå·©å›ºåŸºç¡€ï¼ŒåŠ å¼ºå›¢é˜Ÿå»ºè®¾ã€‚åˆä½œé¡ºåˆ©ã€‚",
            'æˆ‘ç”Ÿ': f"æ—¥ä¸»{day_element}ç”Ÿ{liuyue_element}ï¼Œæœ¬æœˆäº‹ä¸šä»˜å‡ºè¾ƒå¤šï¼Œéœ€æ³¨æ„å¹³è¡¡å·¥ä½œä¸ä¼‘æ¯ã€‚é€‚åˆåŸ¹å…»å›¢é˜Ÿï¼Œé•¿è¿œæŠ•èµ„ã€‚",
            'å…‹æˆ‘': f"æœ¬æœˆå—{liuyue_element}å…‹åˆ¶ï¼Œäº‹ä¸šè¿åŠ¿éœ€è°¨æ…ï¼Œå®œä½è°ƒè¡Œäº‹ï¼Œé¿å…å†²çªã€‚ä»¥å®ˆä¸ºæ”»ï¼Œç­‰å¾…æ—¶æœºã€‚"
        }
        
        base_text = templates.get(relation, "æœ¬æœˆäº‹ä¸šè¿åŠ¿å¹³ç¨³ï¼Œç¨³æ‰ç¨³æ‰“æ¨è¿›å·¥ä½œå³å¯ã€‚")
        
        # æ ¹æ®åç¥è¡¥å……ï¼ˆæ·»åŠ é˜²å¾¡æ€§æ£€æŸ¥ï¼‰
        zhengguan = ten_gods.get('æ­£å®˜') if isinstance(ten_gods, dict) else {}
        if isinstance(zhengguan, dict) and zhengguan.get('count', 0) > 0:
            base_text += "å‘½ä¸­æ­£å®˜ï¼Œé€‚åˆå¤„ç†æ­£å¼äº‹åŠ¡ï¼Œéµå®ˆè§„åˆ™ã€‚"
        else:
            pian_guan = ten_gods.get('åå®˜') if isinstance(ten_gods, dict) else {}
            if isinstance(pian_guan, dict) and pian_guan.get('count', 0) > 0:
                base_text += "ä¸ƒæ€åœ¨å‘½ï¼Œé€‚åˆå¼€æ‹“åˆ›æ–°ï¼Œçªç ´å¸¸è§„ã€‚"
        
        return base_text
    
    @staticmethod
    def _generate_wealth_fortune(day_element: str, liuyue_element: str, relation: str, ten_gods: dict) -> str:
        """ç”Ÿæˆè´¢è¿"""
        templates = {
            'æˆ‘å…‹': f"æ—¥ä¸»{day_element}å…‹{liuyue_element}ä¸ºè´¢ï¼Œæœ¬æœˆè´¢è¿æ—ºç››ï¼ŒæŠ•èµ„ç†è´¢æ—¶æœºå¥½ï¼ŒæŠŠæ¡å•†æœºå¯è·åˆ©ã€‚",
            'ç”Ÿæˆ‘': f"æœ¬æœˆå¾—{liuyue_element}ç›¸ç”Ÿï¼Œè´¢è¿ç¨³ä¸­æœ‰å‡ï¼Œé€‚åˆç¨³å¥æŠ•èµ„ï¼Œå¤šæ–¹ç»è¥ã€‚",
            'æ¯”å’Œ': f"æœ¬æœˆè´¢è¿å¹³ç¨³ï¼Œæ”¶å…¥ç¨³å®šï¼Œé€‚åˆå‚¨è“„ç†è´¢ï¼Œæ§åˆ¶å¼€æ”¯ã€‚",
            'å…‹æˆ‘': f"æœ¬æœˆå—{liuyue_element}å…‹åˆ¶ï¼Œè´¢è¿ç¨å¼±ï¼Œé¿å…å¤§é¢æŠ•èµ„ï¼Œå®ˆè´¢ä¸ºä¸Šã€‚",
            'æˆ‘ç”Ÿ': f"æœ¬æœˆæ³„æ°”ï¼Œè´¢è¿ä¸€èˆ¬ï¼Œå¼€æ”¯å¯èƒ½å¢åŠ ï¼Œéœ€ç†æ€§æ¶ˆè´¹ï¼Œé¿å…æµªè´¹ã€‚"
        }
        
        base_text = templates.get(relation, "æœ¬æœˆè´¢è¿å¹³ç¨³ï¼Œå»ºè®®ç†æ€§ç†è´¢ã€‚")
        
        # ã€é˜²å¾¡æ€§ä»£ç ã€‘ç¡®ä¿ ten_gods æ˜¯å­—å…¸ç±»å‹
        if not isinstance(ten_gods, dict):
            ten_gods = {}
        
        # æ ¹æ®åç¥è¡¥å……ï¼ˆæ·»åŠ é˜²å¾¡æ€§æ£€æŸ¥ï¼‰
        zhengcai = ten_gods.get('æ­£è´¢') if isinstance(ten_gods, dict) else {}
        if isinstance(zhengcai, dict) and zhengcai.get('count', 0) > 0:
            base_text += "æ­£è´¢åœ¨å‘½ï¼Œå·¥èµ„æ”¶å…¥ç¨³å®šï¼Œå¯å¢åŠ å‚¨è“„ã€‚"
        else:
            piancai = ten_gods.get('åè´¢') if isinstance(ten_gods, dict) else {}
            if isinstance(piancai, dict) and piancai.get('count', 0) > 0:
                base_text += "åè´¢åœ¨å‘½ï¼ŒæŠ•èµ„ç†è´¢æœ‰æœºä¼šï¼Œä½†éœ€è°¨æ…ã€‚"
        
        return base_text
    
    @staticmethod
    def _generate_love_fortune(day_element: str, liuyue_element: str, relation: str, ten_gods: dict) -> str:
        """ç”Ÿæˆæ„Ÿæƒ…è¿åŠ¿"""
        templates = {
            'ç”Ÿæˆ‘': f"æœ¬æœˆå¾—{liuyue_element}ç›¸ç”Ÿï¼Œæ„Ÿæƒ…è¿åŠ¿ä½³ï¼Œå•èº«è€…æ¡ƒèŠ±è¿æ—ºï¼Œæœ‰ç¼˜åˆ†å‡ºç°ã€‚æ‹çˆ±ä¸­æ„Ÿæƒ…å‡æ¸©ï¼Œé€‚åˆè¡¨ç™½æˆ–å®šäº²ã€‚",
            'æ¯”å’Œ': f"æœ¬æœˆæ„Ÿæƒ…è¿åŠ¿å¹³å’Œï¼Œä¸ä¼´ä¾£å…³ç³»ç¨³å®šï¼Œé€‚åˆå…±åŒè§„åˆ’æœªæ¥ï¼Œå¢è¿›é»˜å¥‘ã€‚",
            'æˆ‘å…‹': f"æœ¬æœˆæ„Ÿæƒ…è¿åŠ¿å°šå¯ï¼Œä¸»åŠ¨å…³å¿ƒå¯¹æ–¹ï¼Œä½†é¿å…è¿‡äºå¼ºåŠ¿ï¼Œå¤šå€¾å¬å¯¹æ–¹æƒ³æ³•ã€‚",
            'æˆ‘ç”Ÿ': f"æœ¬æœˆæ„Ÿæƒ…ä»˜å‡ºè¾ƒå¤šï¼Œå¯¹ä¼´ä¾£ä½“è´´å…³æ€€ï¼ŒçœŸè¯šæ²Ÿé€šå¯å¢è¿›æ„Ÿæƒ…ã€‚",
            'å…‹æˆ‘': f"æœ¬æœˆæ„Ÿæƒ…éœ€æ³¨æ„ï¼Œå¯èƒ½æœ‰æ‘©æ“¦ï¼Œå¤šåŒ…å®¹ç†è§£ï¼Œé¿å…äº‰åµã€‚å•èº«è€…ç¼˜åˆ†ç¨å¼±ï¼Œé¡ºå…¶è‡ªç„¶ã€‚"
        }
        
        return templates.get(relation, "æœ¬æœˆæ„Ÿæƒ…è¿åŠ¿å¹³ç¨³ï¼Œé€‚åˆä¸ä¼´ä¾£äº’åŠ¨äº¤æµã€‚")
    
    @staticmethod
    def _generate_health_fortune(day_element: str, element_counts: dict, relation: str) -> str:
        """ç”Ÿæˆå¥åº·è¿åŠ¿"""
        # ã€é˜²å¾¡æ€§ä»£ç ã€‘ç¡®ä¿ element_counts æ˜¯å­—å…¸ç±»å‹
        if not isinstance(element_counts, dict):
            element_counts = {}
        
        weak_elements = [elem for elem, count in element_counts.items() if count < 2]
        
        health_tips = {
            'æœ¨': "æ³¨æ„è‚èƒ†ä¿å…»ï¼Œå¤šé£Ÿç»¿è‰²è”¬èœï¼Œä¿æŒå¿ƒæƒ…èˆ’ç•…",
            'ç«': "æ³¨æ„å¿ƒè„å’Œè¡€æ¶²å¾ªç¯ï¼Œä¿æŒæƒ…ç»ªå¹³å’Œï¼Œé¿å…ç†¬å¤œ",
            'åœŸ': "æ³¨æ„è„¾èƒƒæ¶ˆåŒ–ï¼Œè§„å¾‹é¥®é£Ÿï¼Œé¿å…æš´é¥®æš´é£Ÿ",
            'é‡‘': "æ³¨æ„å‘¼å¸ç³»ç»Ÿå’Œçš®è‚¤ï¼Œé€‚é‡è¿åŠ¨ï¼Œå¢å¼ºä½“è´¨",
            'æ°´': "æ³¨æ„è‚¾è„å’Œæ³Œå°¿ç³»ç»Ÿï¼Œå¤šå–æ°´ï¼Œæ³¨æ„ä¿æš–"
        }
        
        base_text = "æœ¬æœˆå¥åº·è¿åŠ¿å°šå¯ï¼Œæ³¨æ„åŠ³é€¸ç»“åˆï¼Œè§„å¾‹ä½œæ¯ã€‚"
        
        if relation == 'å…‹æˆ‘':
            base_text = "æœ¬æœˆå—å…‹ï¼Œèº«ä½“ç¨å¼±ï¼Œé¿å…è¿‡åº¦åŠ³ç´¯ï¼Œæ³¨æ„ä¼‘æ¯ï¼Œå¢å¼ºå…ç–«åŠ›ã€‚"
        elif relation == 'ç”Ÿæˆ‘':
            base_text = "æœ¬æœˆå¾—ç”Ÿï¼Œç²¾åŠ›å……æ²›ï¼Œé€‚åˆè¿åŠ¨é”»ç‚¼ï¼Œå¢å¼ºä½“è´¨ã€‚"
        elif relation == 'æˆ‘ç”Ÿ':
            base_text = "æœ¬æœˆæ³„æ°”ï¼Œæ³¨æ„è¡¥å……è¥å…»ï¼Œé¿å…è¿‡åº¦æ¶ˆè€—ï¼Œè°ƒå…»ç”Ÿæ¯ã€‚"
        
        if weak_elements:
            tips = health_tips.get(weak_elements[0], '')
            if tips:
                base_text += tips + "ã€‚"
        
        return base_text
    
    @staticmethod
    def _generate_advice_by_relation(relation: str, day_element: str, liuyue_element: str) -> str:
        """æ ¹æ®äº”è¡Œå…³ç³»ç”Ÿæˆæœ¬æœˆå»ºè®®"""
        advice_templates = {
            'ç”Ÿæˆ‘': f"æœ¬æœˆå¾—{liuyue_element}ç›¸ç”Ÿï¼Œè¿åŠ¿å‘å¥½ã€‚å»ºè®®ï¼šæŠŠæ¡æœºé‡ï¼Œä¸»åŠ¨å‡ºå‡»ï¼›å‘æŒ¥ä¼˜åŠ¿ï¼Œå±•ç°æ‰åï¼›å¤šä¸è´µäººåˆä½œï¼Œæ‰©å±•äººè„‰ã€‚",
            'æˆ‘å…‹': f"æ—¥ä¸»{day_element}å…‹{liuyue_element}ï¼Œæœ¬æœˆæœ‰åˆ©ã€‚å»ºè®®ï¼šæœæ–­å†³ç­–ï¼Œç§¯æè¡ŒåŠ¨ï¼›æŠŠæ¡è´¢è¿ï¼Œåˆç†æŠ•èµ„ï¼›æ³¨æ„ä¸è¦è¿‡äºå¼ºåŠ¿ï¼Œå…¼é¡¾ä»–äººã€‚",
            'æ¯”å’Œ': f"æœ¬æœˆæ¯”å’Œï¼Œè¿åŠ¿å¹³ç¨³ã€‚å»ºè®®ï¼šç¨³æ­¥æ¨è¿›å·¥ä½œè®¡åˆ’ï¼›åŠ å¼ºå›¢é˜Ÿåä½œï¼›å·©å›ºç°æœ‰æˆæœï¼Œä¸ºä¸‹æœˆè“„åŠ›ã€‚",
            'æˆ‘ç”Ÿ': f"æœ¬æœˆæ³„æ°”ï¼Œéœ€æ³¨æ„èƒ½é‡ã€‚å»ºè®®ï¼šé‡åŠ›è€Œè¡Œï¼Œé¿å…è¿‡åº¦ä»˜å‡ºï¼›æ³¨é‡ä¼‘æ¯è°ƒå…»ï¼›åšå¥½é•¿è¿œè§„åˆ’ï¼ŒåŸ¹å…»åå¤‡åŠ›é‡ã€‚",
            'å…‹æˆ‘': f"æœ¬æœˆå—{liuyue_element}å…‹åˆ¶ï¼Œéœ€è°¨æ…ã€‚å»ºè®®ï¼šä½è°ƒè¡Œäº‹ï¼Œé¿å…å†²çªï¼›ä»¥å®ˆä»£æ”»ï¼Œç§¯è“„åŠ›é‡ï¼›ä¿æŒè€å¿ƒï¼Œç­‰å¾…è½¬æœºã€‚"
        }
        
        return advice_templates.get(relation, "ä¿æŒå¹³å¸¸å¿ƒï¼Œé¡ºåŠ¿è€Œä¸ºï¼ŒæŠŠæ¡å½“ä¸‹ã€‚")
    
    @staticmethod
    def _get_category_level(score: int) -> str:
        """æ ¹æ®è¯„åˆ†è¿”å›è¿åŠ¿ç­‰çº§"""
        if score >= 80:
            return "æ—ºç››"
        elif score >= 70:
            return "è‰¯å¥½"
        elif score >= 60:
            return "å¹³ç¨³"
        elif score >= 50:
            return "ç¨å¼±"
        else:
            return "éœ€è°¨æ…"
    
    @staticmethod
    def _generate_with_rules(
        bazi_data: Dict[str, Any],
        liuyue_info: Dict[str, Any],
        matched_rules: list,
        target_date: date
    ) -> Dict[str, Any]:
        """ä½¿ç”¨è§„åˆ™åŒ¹é…ç”Ÿæˆæœˆè¿åŠ¿åˆ†æï¼ˆåŸºäºå…«å­—åŠ¨æ€ç”Ÿæˆï¼‰"""
        # æ·»åŠ æ•°æ®ç±»å‹éªŒè¯
        if not isinstance(bazi_data, dict):
            raise TypeError(f"bazi_data å¿…é¡»æ˜¯å­—å…¸ç±»å‹ï¼Œä½†å®é™…æ˜¯: {type(bazi_data).__name__}ï¼Œå€¼: {str(bazi_data)[:100]}")
        
        lines = []
        
        month_str = f"{target_date.year}å¹´{target_date.month}æœˆ"
        lines.append(f"ã€{month_str}è¿åŠ¿åˆ†æã€‘")
        lines.append("=" * 60)
        lines.append("")
        
        # æå–å…«å­—å…³é”®ä¿¡æ¯
        day_stem = bazi_data.get('bazi_pillars', {}).get('day', {}).get('stem', 'æœªçŸ¥')
        day_branch = bazi_data.get('bazi_pillars', {}).get('day', {}).get('branch', 'æœªçŸ¥')
        day_element = bazi_data.get('elements', {}).get('day', {}).get('stem_element', 'æœªçŸ¥')
        
        # æµæœˆä¿¡æ¯
        liuyue_ganzhi = liuyue_info.get('liuyue', {}).get('ganzhi', 'æœªçŸ¥') if isinstance(liuyue_info.get('liuyue'), dict) else 'æœªçŸ¥'
        liunian_ganzhi = liuyue_info.get('liunian', {}).get('ganzhi', 'æœªçŸ¥') if isinstance(liuyue_info.get('liunian'), dict) else 'æœªçŸ¥'
        
        lines.append(f"å…«å­—æ—¥å¹²ï¼š{day_stem}{day_branch}ï¼ˆ{day_element}ï¼‰")
        if liuyue_ganzhi != 'æœªçŸ¥':
            lines.append(f"æµæœˆï¼š{liuyue_ganzhi}")
        if liunian_ganzhi != 'æœªçŸ¥':
            lines.append(f"æµå¹´ï¼š{liunian_ganzhi}")
        lines.append("")
        
        # åŸºäºå…«å­—ç”Ÿæˆè¿åŠ¿åˆ†æ
        career_text, wealth_text, love_text, health_text, overall_score, advice = MonthlyFortuneService._analyze_by_bazi(
            bazi_data, liuyue_info, matched_rules, target_date
        )
        
        # æœˆåº¦æ¦‚å†µ
        lines.append("ã€æœˆåº¦æ¦‚å†µã€‘")
        if matched_rules:
            summary_text = MonthlyFortuneService._generate_summary(matched_rules)
            lines.append(summary_text)
        else:
            lines.append(f"æ—¥ä¸»{day_element}ï¼Œ{month_str}{liuyue_ganzhi}ã€‚" + advice.split('ã€‚')[0] + "ã€‚")
        lines.append("")
        
        # åˆ†ç±»è¿åŠ¿
        lines.append("ã€åˆ†ç±»è¿åŠ¿ã€‘")
        lines.append("")
        lines.append(f"ğŸ“ˆ äº‹ä¸šè¿åŠ¿ï¼š{career_text}")
        lines.append("")
        lines.append(f"ğŸ’° è´¢è¿ï¼š{wealth_text}")
        lines.append("")
        lines.append(f"ğŸ’• æ„Ÿæƒ…è¿åŠ¿ï¼š{love_text}")
        lines.append("")
        lines.append(f"ğŸ¥ å¥åº·è¿åŠ¿ï¼š{health_text}")
        lines.append("")
        
        # æœ¬æœˆå»ºè®®
        lines.append("ã€æœ¬æœˆå»ºè®®ã€‘")
        lines.append(advice)
        lines.append("")
        
        # é‡è¦æ—¥æœŸï¼ˆæœ¬æœˆçš„å…³é”®èŠ‚ç‚¹ï¼‰
        lines.append("ã€é‡è¦æ—¥æœŸã€‘")
        important_dates = MonthlyFortuneService._generate_important_dates(target_date)
        for date_info in important_dates:
            lines.append(f"  {date_info['date']}ï¼š{date_info['description']}")
        lines.append("")
        lines.append("ä»¥ä¸Šåˆ†æåŸºäºå…«å­—å‘½ç†ï¼Œä»…ä¾›å‚è€ƒã€‚")
        
        # ç»„ç»‡ä¸ºå­—å…¸æ ¼å¼è¿”å›
        fortune_text = "\n".join(lines)
        
        return {
            "full_text": fortune_text,
            "month": f"{target_date.year}å¹´{target_date.month}æœˆ",
            "summary": f"{day_element}æ—¥ä¸»ï¼Œ{month_str}è¿åŠ¿åˆ†æ",
            "career": career_text,
            "wealth": wealth_text,
            "love": love_text,
            "health": health_text,
            "advice": advice,
            "important_dates": important_dates,
            "overall_score": overall_score,
            "categories": {
                "career": MonthlyFortuneService._get_category_level(overall_score + 5),
                "wealth": MonthlyFortuneService._get_category_level(overall_score),
                "love": MonthlyFortuneService._get_category_level(overall_score - 5),
                "health": MonthlyFortuneService._get_category_level(overall_score)
            }
        }
    
    @staticmethod
    def _generate_summary(matched_rules: list) -> str:
        """ç”Ÿæˆæœˆåº¦æ¦‚å†µ"""
        if not matched_rules:
            return "æœ¬æœˆè¿åŠ¿å¹³ç¨³ã€‚"
        
        # ä»å‰3æ¡è§„åˆ™ä¸­æå–å…³é”®ä¿¡æ¯
        summary_parts = []
        for rule in matched_rules[:3]:
            content = rule.get('content', {})
            text = content.get('text', '')
            if text and len(summary_parts) < 3:
                # å–å‰50ä¸ªå­—
                summary_parts.append(text[:50])
        
        return "ï¼›".join(summary_parts) if summary_parts else "æœ¬æœˆè¿åŠ¿å¹³ç¨³ã€‚"
    
    @staticmethod
    def _generate_advice(matched_rules: list) -> str:
        """ç”Ÿæˆæœ¬æœˆå»ºè®®"""
        if not matched_rules:
            return "ä¿æŒç§¯æå¿ƒæ€ï¼Œç¨³æ­¥å‰è¿›ã€‚"
        
        # ä»è§„åˆ™ä¸­æå–å»ºè®®
        for rule in matched_rules[:5]:
            content = rule.get('content', {})
            advice = content.get('advice', '')
            if advice:
                return advice
        
        return "æŠŠæ¡æœºä¼šï¼Œæ³¨æ„é˜²èŒƒé£é™©ï¼Œä¿æŒå¹³è¡¡å¿ƒæ€ã€‚"
    
    @staticmethod
    def _generate_important_dates(target_date: date) -> list:
        """ç”Ÿæˆé‡è¦æ—¥æœŸæé†’"""
        important_dates = []
        
        # æœˆåˆï¼ˆ1-5æ—¥ï¼‰
        important_dates.append({
            "date": f"{target_date.month}æœˆ1-5æ—¥",
            "description": "æœˆåˆï¼Œé€‚åˆåˆ¶å®šè®¡åˆ’ï¼Œå¼€å¯æ–°çš„å·¥ä½œé¡¹ç›®ã€‚"
        })
        
        # æœˆä¸­ï¼ˆ10-15æ—¥ï¼‰
        important_dates.append({
            "date": f"{target_date.month}æœˆ10-15æ—¥",
            "description": "æœˆä¸­ï¼Œé€‚åˆæ¨è¿›é‡è¦äº‹åŠ¡ï¼ŒæŠŠæ¡æœºé‡ã€‚"
        })
        
        # æœˆæœ«ï¼ˆæœ€å5å¤©ï¼‰
        last_day = calendar.monthrange(target_date.year, target_date.month)[1]
        important_dates.append({
            "date": f"{target_date.month}æœˆ{last_day-4}-{last_day}æ—¥",
            "description": "æœˆæœ«ï¼Œé€‚åˆæ€»ç»“åæ€ï¼Œå‡†å¤‡ä¸‹æœˆè®¡åˆ’ã€‚"
        })
        
        return important_dates
    
    @staticmethod
    def _calculate_score(matched_rules: list) -> int:
        """è®¡ç®—ç»¼åˆè¿åŠ¿è¯„åˆ†"""
        if not matched_rules:
            return 60  # é»˜è®¤å¹³ç¨³åˆ†æ•°
        
        # æ ¹æ®è§„åˆ™ä¸­çš„è¯„åˆ†è®¡ç®—å¹³å‡å€¼
        scores = []
        for rule in matched_rules[:10]:  # å–å‰10æ¡è§„åˆ™
            content = rule.get('content', {})
            score = content.get('score')
            if isinstance(score, (int, float)):
                scores.append(score)
        
        if scores:
            avg_score = sum(scores) / len(scores)
            return int(avg_score)
        
        return 65  # é»˜è®¤ç•¥åæ­£é¢çš„åˆ†æ•°
    
    @staticmethod
    def _generate_with_llm(
        bazi_data: Dict[str, Any],
        liuyue_info: Dict[str, Any],
        target_date: date,
        access_token: Optional[str],
        bot_id: Optional[str]
    ) -> Dict[str, Any]:
        """ä½¿ç”¨ LLM ç”Ÿæˆæœˆè¿åŠ¿ï¼ˆå¯é€‰åŠŸèƒ½ï¼‰"""
        # è¿™é‡Œå¯ä»¥é›†æˆ Coze AI æˆ–å…¶ä»– LLM
        # æš‚æ—¶è¿”å›è§„åˆ™ç”Ÿæˆç»“æœ
        return MonthlyFortuneService._generate_with_rules(bazi_data, liuyue_info, [], target_date)

